[package]
name = "rusty-reaper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"]}
aws-sdk-ec2 = "1.103.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.29", features = ["derive"]}
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
unicode-width = "0.1.14"