[package]
name = "rusty-reaper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"]}
aws-sdk-ec2 = "1.103.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.29", features = ["derive"]}
tabled = "0.20.0"
strum = "0.27"
strum_macros = "0.27"
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0.100"